# Mongoose_test_win

./: .gitignore  CMakeLists.txt  pack-frontend.ps1  pack.js  start-dev.bat  start-prod.bat  start.ps1  start.sh
.github/: copilot-instructions.md
.github/prompts/: plan-deviceConsoleApp.prompt.md
.trae/rules/: instructions.md
Template/mongoose_wizard/: Makefile  README.md
Template/mongoose_wizard/mongoose/: mongoose_fs.c  mongoose_glue.c  mongoose_wizard.json
doc/: Dashboard.md  Debug.md  Firmware.md  Log.md  Settings.md  glossary.md
webroot/: index.html  package-lock.json  package.json  vite.config.ts
webroot/src/: api.ts  app.tsx  auth.tsx  i18n.tsx  index.css  types.ts
webroot/src/components/: Layout.tsx  MemoryChart.tsx  Toast.tsx  WebSocket.tsx  ui.tsx
webroot/src/pages/: Dashboard.tsx  Debug.tsx  Firmware.tsx  Log.tsx  Login.tsx  Settings.tsx
webserver/: CMakeLists.txt
webserver/app/: CMakeLists.txt  main.c
webserver/common/: CMakeLists.txt
webserver/common/mongoose/: CMakeLists.txt
webserver/net/: CMakeLists.txt  webserver_glue.c  webserver_glue.h  webserver_glue_sim.c  webserver_impl.c  webserver_impl.h  webserver_packedfs.c
webserver/simulate/Logs/: arm_log.db
